Updated Device Hierarchy function to retrieve subdevice1. Added API call GET {base}/racks/{rack_id}/all/devices/subdevices
