# main.go
@@ -341,6 +341,9 @@ func main() {
 	router.HandleFunc("/api/user/racks/{id:[0-9]+}/devices",
 		controllers.GetRackHierarchyToDevices).Methods("GET")
 
+	router.HandleFunc("/api/user/racks/{id:[0-9]+}/all/devices/subdevices",
+		controllers.GetRackHierarchyToSubdevices).Methods("GET")
+
 	router.HandleFunc("/api/user/racks/{id:[0-9]+}/all",
 		controllers.GetRackHierarchy).Methods("GET")
 
